// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VMenu.js should render component with custom activator and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom auto and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: 200px; min-width: 16px; max-width: NaNpx; top: 12px; left: -16px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom bottom and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom closeOnClick and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom closeOnContentClick and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom disabled and match snapshot 1`] = `

<div class="menu menu--disabled"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom fullWidth and match snapshot 1`] = `

<div class="menu"
     style="display: block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom lazy and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom left and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom maxHeight and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: 100px; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom maxWidth and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: 100px; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom minWidth and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 100px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeBottom and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 100px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeLeft and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 100px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeRight and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: -100px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeTop and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeWidth and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 100px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom offsetX and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom offsetY and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom openOnClick and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom openOnHover and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom origin and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom positionAbsolutely and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom positionX and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom positionY and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom right and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom top and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom transition and match snapshot 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should work 1`] = `

<div class="menu"
     style="display: inline-block;"
>
  <div class="menu__activator menu__activator--active">
    <button type="button"
            class="btn btn--raised"
    >
      <div class="btn__content">
      </div>
    </button>
  </div>
  <div class="menu__content"
       style="max-height: auto; min-width: 0px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
  >
    <div class="card"
         style="height: auto;"
    >
    </div>
  </div>
</div>

`;
